--- a/vectors.html
+++ b/vectors.html
@@ -1923,17 +1923,20 @@
             <h3 class="lang lang-en">Exercise 7</h3>
 			<h3 class="lang lang-es" lang="es">Ejercicio 7</h3>
             <p class="lang lang-en">
-                A rigid body rotates with an angular velocity `w` given by the vector `vecw = vec i + vecj + veck`. Calculate the linear speed `vecv` with which a point P of the body moves, whose position vector is `vecr = 2veci - 2vecj + veck`, knowing that `vecv = vecw xx vecr`.
+                A rigid body rotates with an angular velocity `w` given by the vector `vecw = vec i + vecj + veck` rad/s. Calculate the linear speed `vecv` with which a point P of the body moves, whose position vector is `vecr = 2veci - 2vecj + veck` m, knowing that `vecv = vecw xx vecr`.
             </p>
 			 <p class="lang lang-es" lang="es">
-                Un cuerpo rígido gira con una velocidad angular `w` dada por el vector `vecw = vec i + vecj + veck`. Calcula la velocidad lineal `vecv` con que se mueve un punto P del cuerpo, cuyo vector de posición es `vecr = 2veci - 2vecj + veck`, sabiendo que `vecv = vecw xx vecr`.
+                Un cuerpo rígido gira con una velocidad angular `w` dada por el vector `vecw = vec i + vecj + veck` rad/s. Calcula la velocidad lineal `vecv` con que se mueve un punto P del cuerpo, cuyo vector de posición es `vecr = 2veci - 2vecj + veck` m, sabiendo que `vecv = vecw xx vecr`.
             </p>
             <p class="lang lang-en">
-                To solve this exercise, we use the concept of <a href="#Vector cross product">vector cross product</a> and the <a href="#Relationship between vector components and its magnitude and orientation">relationship between vector components and its magnitude and orientation</a>.
+                To solve this exercise, we use the concept of <a href="#Vector cross product">vector cross product</a> and the expression<a href="#[1.18]">[1.18]</a>. Then
             </p>
             <p class="lang lang-es" lang="es">
-                Para resolver este ejercicio, utilicemos las noción de <a href="#Componentes de un Vector">componentes de un vector</a> y la <a href="#Relación entre las componentes de un vector, su módulo y su dirección">relación entre las componentes de un vector, su módulo y su dirección</a>.
+                Para resolver este ejercicio, utilicemos las noción de <a href="#Producto vectorial">producto vectorial</a> y la e  expresión<a href="#[1.18]">[1.18]</a>. Entonces
             </p>
+            <p>&emsp;`vecv = vecw xx vecr = |[veci, vecj, veck], [1, 1, 1], [2, -2, 1]| = |[1, 1], [-2, 1]|*veci - |[1, 1], [2, 1]|*vecj + |[1, 1], [2, -2]|*veck => (1+2)*veci - (1-2)*vecj + (-2-2)*veck`</p>
+            <p>&emsp; `=> vecv = 3veci + vecj -4veck`</p>   
+            
         </section>
     </article>
 </body>
