--- a/vectors.html
+++ b/vectors.html
@@ -1935,8 +1935,39 @@
                 Para resolver este ejercicio, utilicemos las noción de <a href="#Producto vectorial">producto vectorial</a> y la e  expresión<a href="#[1.18]">[1.18]</a>. Entonces
             </p>
             <p>&emsp;`vecv = vecw xx vecr = |[veci, vecj, veck], [1, 1, 1], [2, -2, 1]| = |[1, 1], [-2, 1]|*veci - |[1, 1], [2, 1]|*vecj + |[1, 1], [2, -2]|*veck => (1+2)*veci - (1-2)*vecj + (-2-2)*veck`</p>
-            <p>&emsp; `=> vecv = 3veci + vecj -4veck`</p>   
+            <p>&emsp; `=> vecv = 3veci + vecj -4veck`</p>
+
+        </section>
+
+        <section><!--Exercise 8-->
+            <h3 class="lang lang-en">Exercise 8</h3>
+			<h3 class="lang lang-es" lang="es">Ejercicio 8</h3>
+            <p class="lang lang-en">
+                Calculate the area of a triangle `/_\ABC`, where the Cartesian coordinates of the vertices are, A = (3,4,1) m, B = (-1, -2, 1) m y C = (2, 0, 3) m.
+            </p>
+			 <p class="lang lang-es" lang="es">
+                Calcula el área de un triángulo `/_\ABC`, siendo las coordenadas cartesianas de los vértices, (3,4,1) m, (-1, -2, 1) m y (2, 0, 3) m.
+            </p>
             
+            <aside><!--References-->
+                <h4 class="lang lang-en">References</h3>
+                <h4 class="lang lang-es" lang="es">Referencias</h3>
+				<ul>
+                    <li>
+                        <a class="lang lang-es" 
+                            lang="es"
+                            href="https://es.wikipedia.org/wiki/Tri%C3%A1ngulo" 
+                            target="_blank">
+                            Triángulo.
+                        </a>
+                        <a class="lang lang-en"
+                            href="https://en.wikipedia.org/wiki/Triangle" 
+                            target="_blank">
+                            Triangle.
+                        </a>
+                    </li>
+                </ul>  
+            </aside>
         </section>
     </article>
 </body>
