--- a/vectors.html
+++ b/vectors.html
@@ -146,7 +146,7 @@
             </svg>
 
             <script>
-                // Function to create a marker element with given ID, viewBox, refX, refY, markerWidth, markerHeight, and fill color
+                
                 /*
                 function createMarker(id, viewBox, markerWidth, markerHeight, fillColor) {
                 var marker = document.createElementNS("http://www.w3.org/2000/svg", "marker");
@@ -172,7 +172,7 @@
                 var svg = document.getElementById("VectorAB");
 
                 // Define marker elements (call the function)
-                var brownMarker = createMarker("Brownarrow", "0 0 10 10", 6, 6, "brown");
+                var brownMarker = createMarker("Brownarrow", "brown");
                 svg.appendChild(brownMarker); // Add the marker to the SVG
 
                 // Create the line element
