--- a/vectors.html
+++ b/vectors.html
@@ -141,8 +141,7 @@
                 width="180"
                 height="220" 
                 viewBox="0 0 180 220" 
-                xmlns="http://www.w3.org/2000/svg"
-            >  
+                xmlns="http://www.w3.org/2000/svg">  
             </svg>
 
             <script>
