--- a/vectors.html
+++ b/vectors.html
@@ -295,25 +295,36 @@
             Para cualquier punto P, se dibuja una línea a través de P perpendicular a cada eje, y la posición en la que se encuentra con el eje se interpreta como un número. Los dos números, en ese orden elegido, son las coordenadas cartesianas (x, y) de P.
         </p>
         <figure class="centered"><!--Cartesian plane and cartesian coordinates of a point.-->
-            <svg viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg" width="400" height="400">
+            <svg
+                id="svg1_3" 
+                width="400" 
+                height="400"
+                viewBox="0 0 400 400" 
+                xmlns="http://www.w3.org/2000/svg">
+
                 <!--y-axis-->
+                <!--
                 <line x1="200" y1="400" x2="200" y2="0" stroke="brown" stroke-width="2" marker-end="url(#Brownarrow)" />
+                
                 <g transform="translate(180, 28)">
                     <text transform="rotate(-90)" text-anchor="middle" dominant-baseline="central" font-size="20" stroke="brown" fill="brown">
                         y-axis
                     </text>
                 </g>
+                -->
                 <!--x-axis-->
+                <!--
                 <line x1="0" y1="200" x2="400" y2="200" stroke="brown" stroke-width="2" marker-end="url(#Brownarrow)" />
+                
                 <text x="345" y="220" font-size="20" stroke="brown" fill="brown">
                     x-axis
-                </text>
-                <!--Origin-->
+                </text>-->
+                <!--Origin
                 <text x="180" y="220" font-size="25" stroke="brown" fill="brown">
                     O
-                </text>
-                <!--Point P-->
-                <circle cx="250" cy="100" r="3" stroke="green" fill="green" />
+                </text>-->
+                <!--Point P
+                <circle cx="250" cy="100" r="3" stroke="green" fill="green" />-->
                 <line x1="250" y1="200" x2="250" y2="100" stroke="green" stroke-dasharray="5,5" />
                 <line x1="250" y1="100" x2="200" y2="100" stroke="green" stroke-dasharray="5,5" />
                 <text x="260" y="100" font-size="20" stroke="green" fill="green" stroke-width="0.6">
