--- a/vectors.html
+++ b/vectors.html
@@ -324,9 +324,9 @@
                     O
                 </text>-->
                 <!--Point P
-                <circle cx="250" cy="100" r="3" stroke="green" fill="green" />-->
+                <circle cx="250" cy="100" r="3" stroke="green" fill="green" />
                 <line x1="250" y1="200" x2="250" y2="100" stroke="green" stroke-dasharray="5,5" />
-                <line x1="250" y1="100" x2="200" y2="100" stroke="green" stroke-dasharray="5,5" />
+                <line x1="250" y1="100" x2="200" y2="100" stroke="green" stroke-dasharray="5,5" /> -->
                 <text x="260" y="100" font-size="20" stroke="green" fill="green" stroke-width="0.6">
                     P (x
                     <tspan dx="-5" dy="8" font-size="15" stroke-width="0.3">1</tspan>
