--- a/vectors.html
+++ b/vectors.html
@@ -326,14 +326,14 @@
                 <!--Point P
                 <circle cx="250" cy="100" r="3" stroke="green" fill="green" />
                 <line x1="250" y1="200" x2="250" y2="100" stroke="green" stroke-dasharray="5,5" />
-                <line x1="250" y1="100" x2="200" y2="100" stroke="green" stroke-dasharray="5,5" /> -->
+                <line x1="250" y1="100" x2="200" y2="100" stroke="green" stroke-dasharray="5,5" /> 
                 <text x="260" y="100" font-size="20" stroke="green" fill="green" stroke-width="0.6">
                     P (x
                     <tspan dx="-5" dy="8" font-size="15" stroke-width="0.3">1</tspan>
                     <tspan dx="-5" dy="-8" font-size="20" stroke-width="0.6">, y</tspan>
                     <tspan dx="-5" dy="8" font-size="15" stroke-width="0.3">1</tspan> 
                     <tspan dx="-5" dy="-8" font-size="20" stroke-width="0.6">)</tspan>
-                    </text>
+                </text> -->
             </svg>
 
             <figcaption class="lang lang-en"><b>Figure 1.3</b> Cartesian plane and cartesian coordinates of a point.</figcaption>
