--- a/vectors.html
+++ b/vectors.html
@@ -343,34 +343,82 @@
         </p>
 
         <figure class="centered"><!--To plot the point P, with coordinates `(x_1, y_1, z_1)`, go `x_1` units along the x-axis, then `y_1` units in the direction of the y-axis, then `z_1` units in the direction of the z-axis.-->
-            <svg viewBox="0 0 400 400" xmlns="http://www.w3.org/2000/svg" width="400" height="400">
+            <svg 
+                id="svg1_5"    
+                width="400" 
+                height="400"
+                viewBox="0 0 400 400" 
+                xmlns="http://www.w3.org/2000/svg" >
                 <!--Use the program ObliqueProjection to calcualte the svg coordinates. -->
 
+                <!--
+                <defs>
+                    //Define markers
+                    <marker
+                    id="Bluearrow"
+                    viewBox="0 0 10 10"
+                    refX="10"
+                    refY="5"
+                    markerWidth="6"
+                    markerHeight="6"
+                    orient="auto-start-reverse">
+                    <path d="M 0 0 L 10 5 L 0 10 z" stroke="blue" fill="blue" />
+                    </marker>
+                
+                    <marker
+                    id="Brownarrow"
+                    viewBox="0 0 10 10"
+                    refX="10"
+                    refY="5"
+                    markerWidth="6"
+                    markerHeight="6"
+                    orient="auto-start-reverse">
+                    <path d="M 0 0 L 10 5 L 0 10 z" stroke="brown" fill="brown" />
+                    </marker>
+                
+                    <marker
+                    id="Greenarrow"
+                    viewBox="0 0 10 10"
+                    refX="10"
+                    refY="5"
+                    markerWidth="6"
+                    markerHeight="6"
+                    orient="auto-start-reverse">
+                    <path d="M 0 0 L 10 5 L 0 10 z" stroke="green" fill="green" />
+                    </marker>
+                </defs>
+                -->
+
                 <!--Z-axis-->
+                <!--
                 <line x1="141" y1="300" x2="141" y2="10" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
                 <text x="125" y="20" font-size="20" stroke="brown" fill="brown">
                     z
-                </text>
+                </text>-->
 
                 <!-- Y-axis-->
+                <!--
                 <line x1="100" y1="259" x2="390" y2="259" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
                 <text x="380" y="250" font-size="20" stroke="brown" fill="brown">
                     y
-                </text>
+                </text>-->
 
                 <!-- X-axis-->
+                <!--
                 <line x1="156" y1="244" x2="7" y2="393" stroke="brown" stroke-width="1" marker-end="url(#Brownarrow)" />
                 <text x="3" y="383" font-size="20" stroke="brown" fill="brown">
                     x
-                </text>
+                </text>-->
 
                 <!--Point P with coordinates (60,90,50)-->
+                <!--
                 <circle cx="189" cy="251" r="3" stroke="blue" fill="blue" />
                 <text x="180" y="247" font-size="20" stroke="blue" fill="blue">
                     P
-                </text>
+                </text>-->
 
                 <!--Mark x1, y1 and z1 coordinates of point P on X, Y and Z axes-->
+                <!--
                 <text x="80" y="302" font-size="15" stroke="blue" fill="blue">
                     x
                     <tspan dx="-3" dy="3" font-size="10" stroke-width="0.3">1</tspan>
@@ -382,9 +430,10 @@
                 <text x="125" y="207" font-size="15" stroke="blue" fill="blue">
                     z
                     <tspan dx="-3" dy="3" font-size="10" stroke-width="0.3">1</tspan>
-                </text>
+                </text>-->
 
                 <!--Draw lines of the paralelogram limited by point P, origin and X,Y,Z axes-->
+                <!--
                 <line x1="98" y1="301" x2="189" y2="301" stroke="blue" stroke-width="1" stroke-dasharray="5,5" />
                 <line x1="231" y1="259" x2="189" y2="301" stroke="blue" stroke-width="1" stroke-dasharray="5,5" />
                 <line x1="141" y1="209" x2="99" y2="251" stroke="blue" stroke-width="1" stroke-dasharray="5,5" />
@@ -394,7 +443,8 @@
                 <line x1="231" y1="259" x2="231" y2="209" stroke="blue" stroke-width="1" stroke-dasharray="5,5" />
                 <line x1="231" y1="209" x2="189" y2="251" stroke="blue" stroke-width="1" stroke-dasharray="5,5" />
                 <line x1="189" y1="301" x2="189" y2="251" stroke="blue" stroke-width="1" stroke-dasharray="5,5" />
-                </svg > 
+                -->
+            </svg > 
 
             <figcaption class="lang lang-en"><b>Figure 1.5</b> To plot the point P, with coordinates `(x_1, y_1, z_1)`, go `x_1` units along the x-axis, then `y_1` units in the direction of the y-axis, then `z_1` units in the direction of the z-axis.</figcaption>
             <figcaption class="lang lang-es" lang="es"><b>Figura 1.5</b> Para trazar el punto P, con coordenadas `(x_1, y_1, z_1)`, desplazarse `x_1` unidades a lo largo del eje x, entonces ir `y_1` unidades en la dirección del eje Y, luego desplazarse `z_1` unidades en la dirección del eje z.</figcaption>
