--- a/vectors.html
+++ b/vectors.html
@@ -728,6 +728,41 @@
         </p>
         <figure class="centered"> <!--Projection of `vecv` onto `vecw`-->
             <svg viewBox="0 0 250 170" xmlns="http://www.w3.org/2000/svg" width="300" height="204">
+                <defs>
+                    //Define markers
+                    <marker
+                    id="Bluearrow"
+                    viewBox="0 0 10 10"
+                    refX="10"
+                    refY="5"
+                    markerWidth="6"
+                    markerHeight="6"
+                    orient="auto-start-reverse">
+                    <path d="M 0 0 L 10 5 L 0 10 z" stroke="blue" fill="blue" />
+                    </marker>
+                
+                    <marker
+                    id="Brownarrow"
+                    viewBox="0 0 10 10"
+                    refX="10"
+                    refY="5"
+                    markerWidth="6"
+                    markerHeight="6"
+                    orient="auto-start-reverse">
+                    <path d="M 0 0 L 10 5 L 0 10 z" stroke="brown" fill="brown" />
+                    </marker>
+                
+                    <marker
+                    id="Greenarrow"
+                    viewBox="0 0 10 10"
+                    refX="10"
+                    refY="5"
+                    markerWidth="6"
+                    markerHeight="6"
+                    orient="auto-start-reverse">
+                    <path d="M 0 0 L 10 5 L 0 10 z" stroke="green" fill="green" />
+                    </marker>
+                </defs>
                 <!--Vector V-->
                 <line x1="10" y1="160" x2="200" y2="10" stroke="green" stroke-width="2" marker-end="url(#Greenarrow)" />
                 <text x="90" y="83" font-size="25" stroke="green" fill="green" font-weight="bold">
