--- a/index.html
+++ b/index.html
@@ -7,21 +7,13 @@
 
     <link rel="stylesheet" href="styles/styles.css">
 
-    <title>The House of Phi</title>
-    <!--This sets the title of your page, which is the title that appears in the browser tab the page is loaded in. It is also used to describe the page when you bookmark/favorite it.-->
+    <title>The House of Phi</title> <!--Page title -->
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
         content="The Pre-Universitary Physics Area aims to provide Physics students with the necessary information to start a universitary Physics course. Making enphasys in example exercises where main Physics and Mathematics concepts are used. And providing references to these concepts">
    
 	<!--To set the viewport of the page, which will give the browser instructions on how to control the page's dimensions and scaling.-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<!-- LOAD THE MATHJAX LIBRARY start -->
-    <!-- DOCS: https://docs.mathjax.org/en/latest/basic/mathematics.html -->
-    <!-- DEMO: https://github.com/mathjax/MathJax-demos-web -->
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-    <!-- LOAD THE MATHJAX LIBRARY end -->
 
     <!-- load the default AsciiMath configuration  http://asciimath.org/ -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=AM_CHTML"></script>
@@ -33,7 +25,6 @@
 <!--the body contains all the content that you want to show to web users when they visit your page-->
 <body>
     <header>
-        <!-- id attribute define an unique identifier. Its purpose is to identify the element when linking, scripting, or styling -->
         <h1 class="lang lang-en">WELCOME TO THE HOUSE OF PHI</h1>
         <h1 class="lang lang-es" lang="es">BIENVENIDO A LA CASA DE PHI</h1>
     </header>
